# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/include/: task3.h  task3b.h
module_1_assignment/src/: task1.cpp  task2.cpp  task3.cpp  task3_main.cpp  task3b.cpp  task3b_main.cpp
module_2_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/launch/: launch_task2.launch.py  launch_task2b.launch.py  launch_task3.launch.py  launch_task3a.launch.py  launch_task3b.launch.py  launch_task4.launch.py
module_2_assignment/src/: task1.cpp  task1b.cpp  task2.cpp  task3.cpp  task4.cpp
module_3_assignment/: CMakeLists.txt  Readme.md
module_3_assignment/launch/: task1.launch.py  task2.launch.py  task2b.launch.py  task3a.launch.py  task3b.launch.py  task3bgazebo.launch.py
module_3_assignment/urdf/: task1.urdf  task2.urdf  task2b.urdf  task3a.urdf  task3b.urdf  task3bgazebo.urdf
module_4_assessment/: Readme.md
module_4_assessment/module_4_assignment/: CMakeLists.txt
module_4_assessment/module_4_assignment/launch/: line_following.launch.py  task3a.launch.py  task3b.launch.py
module_4_assessment/module_4_assignment/models/wall_follow/: model.config  model.sdf
module_4_assessment/module_4_assignment/src/: task3b.cpp  task3c.cpp  task_1.cpp
module_4_assessment/module_4_assignment/worlds/: line_following.world  wall_follow.world
module_4_assessment/robot_sensing_debug/launch/: camera_line_following.launch.py  lidar_maze_solving.launch.py
module_4_assessment/robot_sensing_debug/src/: maze_solving_with_lidar.cpp
module_4_assessment/robot_sensing_debug/urdf/: diff_drive.urdf
module_4_assessment/robot_sensing_debug/worlds/: line_following.world
module_5_assignment/: CMakeLists.txt  Readme.md
module_5_assignment/config/: arm_controller.yaml
module_5_assignment/launch/: task1.launch.py  task3.launch.py
module_5_assignment/models/line_track/: model.sdf
module_5_assignment/src/: task1.cpp  task2.cpp  task4.cpp
module_5_assignment/urdf/: task3.urdf
module_5_assignment/worlds/: line_following.world
module_6_assignment/: CMakeLists.txt  Readme.md
module_6_assignment/config/: task1.rviz  task3.rviz
module_6_assignment/include/: task3_lib.hpp
module_6_assignment/launch/: task2.launch.py  task3.launch.py  task3b.launch.py
module_6_assignment/src/: task1.cpp  task3.cpp  task3_lib.cpp  task3b.cpp
module_7_assignment/: CMakeLists.txt  Readme.md
module_7_assignment/launch/: task1a.launch.py  task1b.launch.py
module_7_assignment/maps/: maze_map.pgm  maze_map.yaml  raw_maze_map.pgm
module_7_assignment/maze/: model.sdf
module_7_assignment/worlds/: maze.world
